fix(auth): clean up lint errors

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,6 +13,10 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-button [hidden]="(authenticationChange$ | async)" (click)="login()">Login</ion-button>
-  <ion-button [hidden]="!(authenticationChange$ | async)"(click)="logout()">Logout</ion-button>
+  <div *ngIf="authenticationChange$ | async; else elseBlock">
+    <ion-button (click)="logout()">Logout</ion-button>
+  </div>
+  <ng-template #elseBlock>
+    <ion-button (click)="login()">Login</ion-button>
+  </ng-template>
 </ion-content>
